@@ -151,8 +151,8 @@ class Smarty_Internal_Compile_Foreachelse extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        list($_open_tag, $this->compiler->nocache) = $this->_close_tag(array('foreach'));
-        $this->_open_tag('foreachelse',array('foreachelse', $this->compiler->nocache));
+        list($_open_tag, $nocache) = $this->_close_tag(array('foreach'));
+        $this->_open_tag('foreachelse',array('foreachelse', $nocache));
 
         return "<?php }} else { ?>";
     } 
